--- a/Primer_Examen/src/App.css
+++ b/Primer_Examen/src/App.css
@@ -40,3 +40,44 @@
 .read-the-docs {
   color: #888;
 }
+
+.formulario {
+  width: 500px;
+  height: 330px;
+  background-color: transparent;
+  border: 2px solid #fff ;
+  display: flex;
+  flex-direction: column;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  margin: 30px
+}
+
+input {
+  margin-left: 150px;
+  width: 200px;
+}
+
+button {
+  margin-top: 30px;
+  margin-left: 160px;
+  width: 200px;
+  background-color: #888;
+}
+
+.card {
+  width: 200px;
+  height: 230px;
+  background-color: transparent;
+  border: 3px solid #08ca28 ;
+  display: flex;
+  flex-direction: column;
+  margin-left: 125px;
+  margin-top: 50px;
+}
